fixed gs-2056, height and overflow added to avoid data rimming (#1564)

--- a/styles/Modal.module.scss
+++ b/styles/Modal.module.scss
@@ -45,6 +45,9 @@
             border-radius: 12px 12px 0px 0px;
             position: fixed;
             bottom: 0;
+            max-height: -webkit-fill-available;
+            max-height: -moz-available;
+            overflow: scroll;
         }
     }
 
@@ -236,6 +239,9 @@
             border-radius: 12px 12px 0px 0px;
             position: fixed;
             bottom: 0;
+            max-height: -webkit-fill-available;
+            max-height: -moz-available;
+            overflow: scroll;
         }
     }
 
@@ -364,6 +370,9 @@
             border-radius: 12px 12px 0px 0px;
             position: fixed;
             bottom: 0;
+            max-height: -webkit-fill-available;
+            max-height: -moz-available;
+            overflow: scroll;
         }
     }
 
